src/test/ui/unsafe/iife.thir.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/iife.rs:7:5
   |
LL |     u();
   |     ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/iife.rs:10:9
   |
LL |         u();
   |         ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/iife.rs:25:17
   |
LL |                 u();
   |                 ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
